# rusty-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  dprint.json
.github/workflows/: ci.yml
docs/: Agent-Ergonomics-And-MCP-Resources.md  AgenticMemory-Goals-Design-Plan.md  Configuration.md  Design.md  Development.md  Editors.md  Engineering_guide.md  MCP-Prompts-Reference.md  QUALITY_MANUAL.md  Troubleshooting.md
scripts/: hook-dprint.sh  hook-geiger.sh  hook-metrics.sh  hook-spellcheck.sh  hook-taplo.sh  hook-verify-fast.sh  metrics.sh  verify.sh
src/: api.rs  config.rs  lib.rs  logging.rs  main.rs  mcp.rs  metrics.rs  processing.rs  qdrant.rs
src/embedding/: mod.rs
src/mcp/: format.rs  mod.rs  registry.rs  schemas.rs  server.rs
src/mcp/handlers/: collections.rs  index.rs  metrics.rs  mod.rs  search.rs  summarize.rs
src/processing/: chunking.rs  mappers.rs  mod.rs  sanitize.rs  service.rs  summarize.rs  types.rs
src/processing/summarize/: idempotency.rs  io.rs  mod.rs  strategy.rs
src/qdrant/: client.rs  filters.rs  mod.rs  payload.rs  scroller.rs  types.rs
src/summarization/: mod.rs
tests/: live_validation.rs  mcp_integration.rs
